wx-core/include/generated/ffi_s.h

// CLASS: wxSVGFileDC
wxClassInfo *wxSVGFileDC_CLASSINFO();
wxSVGFileDC *wxSVGFileDC_new(const wxString * filename, int width, int height, double dpi, const wxString * title);
void wxSVGFileDC_Clear(wxSVGFileDC * self);
void wxSVGFileDC_SetBitmapHandler(wxSVGFileDC * self, wxSVGBitmapHandler * handler);
void wxSVGFileDC_DestroyClippingRegion(wxSVGFileDC * self);
void wxSVGFileDC_CrossHair(wxSVGFileDC * self, wxCoord x, wxCoord y);
bool wxSVGFileDC_GetPixel(const wxSVGFileDC * self, wxCoord x, wxCoord y, wxColour * colour);
void wxSVGFileDC_SetPalette(wxSVGFileDC * self, const wxPalette * palette);
int wxSVGFileDC_GetDepth(const wxSVGFileDC * self);
bool wxSVGFileDC_StartDoc(wxSVGFileDC * self, const wxString * message);
void wxSVGFileDC_EndDoc(wxSVGFileDC * self);
void wxSVGFileDC_StartPage(wxSVGFileDC * self);
void wxSVGFileDC_EndPage(wxSVGFileDC * self);
// CLASS: wxSashEvent
wxClassInfo *wxSashEvent_CLASSINFO();
wxRect *wxSashEvent_GetDragRect(const wxSashEvent * self);
void wxSashEvent_SetDragRect(wxSashEvent * self, const wxRect * rect);
// CLASS: wxSashLayoutWindow
wxClassInfo *wxSashLayoutWindow_CLASSINFO();
wxSashLayoutWindow *wxSashLayoutWindow_new();
wxSashLayoutWindow *wxSashLayoutWindow_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxSashLayoutWindow_Create(wxSashLayoutWindow * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
void wxSashLayoutWindow_OnCalculateLayout(wxSashLayoutWindow * self, wxCalculateLayoutEvent * event);
void wxSashLayoutWindow_OnQueryLayoutInfo(wxSashLayoutWindow * self, wxQueryLayoutInfoEvent * event);
void wxSashLayoutWindow_SetDefaultSize(wxSashLayoutWindow * self, const wxSize * size);
// CLASS: wxSashWindow
wxClassInfo *wxSashWindow_CLASSINFO();
wxSashWindow *wxSashWindow_new();
wxSashWindow *wxSashWindow_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
int wxSashWindow_GetMaximumSizeX(const wxSashWindow * self);
int wxSashWindow_GetMaximumSizeY(const wxSashWindow * self);
int wxSashWindow_GetMinimumSizeX(const wxSashWindow * self);
int wxSashWindow_GetMinimumSizeY(const wxSashWindow * self);
void wxSashWindow_SetMaximumSizeX(wxSashWindow * self, int min);
void wxSashWindow_SetMaximumSizeY(wxSashWindow * self, int min);
void wxSashWindow_SetMinimumSizeX(wxSashWindow * self, int min);
void wxSashWindow_SetMinimumSizeY(wxSashWindow * self, int min);
void wxSashWindow_SetDefaultBorderSize(wxSashWindow * self, int width);
int wxSashWindow_GetDefaultBorderSize(const wxSashWindow * self);
void wxSashWindow_SetExtraBorderSize(wxSashWindow * self, int width);
int wxSashWindow_GetExtraBorderSize(const wxSashWindow * self);
void wxSashWindow_SizeWindows(wxSashWindow * self);
// CLASS: wxScreenDC
wxClassInfo *wxScreenDC_CLASSINFO();
wxScreenDC *wxScreenDC_new();
bool wxScreenDC_EndDrawingOnTop();
bool wxScreenDC_StartDrawingOnTop(wxWindow * window);
bool wxScreenDC_StartDrawingOnTop1(wxRect * rect);
// CLASS: wxScrollBar
wxClassInfo *wxScrollBar_CLASSINFO();
wxScrollBar *wxScrollBar_new();
wxScrollBar *wxScrollBar_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
bool wxScrollBar_Create(wxScrollBar * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
int wxScrollBar_GetPageSize(const wxScrollBar * self);
int wxScrollBar_GetRange(const wxScrollBar * self);
int wxScrollBar_GetThumbPosition(const wxScrollBar * self);
int wxScrollBar_GetThumbSize(const wxScrollBar * self);
void wxScrollBar_SetThumbPosition(wxScrollBar * self, int view_start);
bool wxScrollBar_IsVertical(const wxScrollBar * self);
// CLASS: wxScrollEvent
wxClassInfo *wxScrollEvent_CLASSINFO();
int wxScrollEvent_GetOrientation(const wxScrollEvent * self);
int wxScrollEvent_GetPosition(const wxScrollEvent * self);
void wxScrollEvent_SetOrientation(wxScrollEvent * self, int orient);
void wxScrollEvent_SetPosition(wxScrollEvent * self, int pos);
// CLASS: wxScrollWinEvent
wxClassInfo *wxScrollWinEvent_CLASSINFO();
int wxScrollWinEvent_GetOrientation(const wxScrollWinEvent * self);
int wxScrollWinEvent_GetPosition(const wxScrollWinEvent * self);
void wxScrollWinEvent_SetOrientation(wxScrollWinEvent * self, int orient);
void wxScrollWinEvent_SetPosition(wxScrollWinEvent * self, int pos);
// CLASS: wxSearchCtrl
wxClassInfo *wxSearchCtrl_CLASSINFO();
wxSearchCtrl *wxSearchCtrl_new();
wxSearchCtrl *wxSearchCtrl_new1(wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
bool wxSearchCtrl_Create(wxSearchCtrl * self, wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
wxMenu * wxSearchCtrl_GetMenu(wxSearchCtrl * self);
bool wxSearchCtrl_IsSearchButtonVisible(const wxSearchCtrl * self);
bool wxSearchCtrl_IsCancelButtonVisible(const wxSearchCtrl * self);
void wxSearchCtrl_SetMenu(wxSearchCtrl * self, wxMenu * menu);
void wxSearchCtrl_ShowCancelButton(wxSearchCtrl * self, bool show);
void wxSearchCtrl_ShowSearchButton(wxSearchCtrl * self, bool show);
void wxSearchCtrl_SetDescriptiveText(wxSearchCtrl * self, const wxString * text);
wxString *wxSearchCtrl_GetDescriptiveText(const wxSearchCtrl * self);
// Mix-in(s) to wxSearchCtrl
wxTextEntryBase *wxSearchCtrl_AsTextEntry(wxSearchCtrl* obj);
// CLASS: wxSetCursorEvent
wxClassInfo *wxSetCursorEvent_CLASSINFO();
wxSetCursorEvent *wxSetCursorEvent_new(wxCoord x, wxCoord y);
wxCursor *wxSetCursorEvent_GetCursor(const wxSetCursorEvent * self);
wxCoord wxSetCursorEvent_GetX(const wxSetCursorEvent * self);
wxCoord wxSetCursorEvent_GetY(const wxSetCursorEvent * self);
bool wxSetCursorEvent_HasCursor(const wxSetCursorEvent * self);
void wxSetCursorEvent_SetCursor(wxSetCursorEvent * self, const wxCursor * cursor);
// CLASS: wxSettableHeaderColumn
void wxSettableHeaderColumn_delete(wxSettableHeaderColumn *self);
void wxSettableHeaderColumn_SetTitle(wxSettableHeaderColumn * self, const wxString * title);
void wxSettableHeaderColumn_SetBitmap(wxSettableHeaderColumn * self, const wxBitmapBundle * bitmap);
void wxSettableHeaderColumn_SetWidth(wxSettableHeaderColumn * self, int width);
void wxSettableHeaderColumn_SetMinWidth(wxSettableHeaderColumn * self, int min_width);
void wxSettableHeaderColumn_SetAlignment(wxSettableHeaderColumn * self, wxAlignment align);
void wxSettableHeaderColumn_SetFlags(wxSettableHeaderColumn * self, int flags);
void wxSettableHeaderColumn_ChangeFlag(wxSettableHeaderColumn * self, int flag, bool set);
void wxSettableHeaderColumn_SetFlag(wxSettableHeaderColumn * self, int flag);
void wxSettableHeaderColumn_ClearFlag(wxSettableHeaderColumn * self, int flag);
void wxSettableHeaderColumn_ToggleFlag(wxSettableHeaderColumn * self, int flag);
void wxSettableHeaderColumn_SetResizeable(wxSettableHeaderColumn * self, bool resizable);
void wxSettableHeaderColumn_SetSortable(wxSettableHeaderColumn * self, bool sortable);
void wxSettableHeaderColumn_SetReorderable(wxSettableHeaderColumn * self, bool reorderable);
void wxSettableHeaderColumn_SetHidden(wxSettableHeaderColumn * self, bool hidden);
void wxSettableHeaderColumn_UnsetAsSortKey(wxSettableHeaderColumn * self);
void wxSettableHeaderColumn_SetSortOrder(wxSettableHeaderColumn * self, bool ascending);
void wxSettableHeaderColumn_ToggleSortOrder(wxSettableHeaderColumn * self);
// CLASS: wxShowEvent
wxClassInfo *wxShowEvent_CLASSINFO();
wxShowEvent *wxShowEvent_new(int winid, bool show);
void wxShowEvent_SetShow(wxShowEvent * self, bool show);
bool wxShowEvent_IsShown(const wxShowEvent * self);