wx-core/src/generated/ffi_s.rs

use super::*;

extern "C" {

    // wxSVGFileDC
    pub fn wxSVGFileDC_CLASSINFO() -> *mut c_void;
    pub fn wxSVGFileDC_new(
        filename: *const c_void,
        width: c_int,
        height: c_int,
        dpi: c_double,
        title: *const c_void,
    ) -> *mut c_void;
    pub fn wxSVGFileDC_Clear(self_: *mut c_void);
    pub fn wxSVGFileDC_SetBitmapHandler(self_: *mut c_void, handler: *mut c_void);
    // NOT_SUPPORTED: pub fn wxSVGFileDC_SetShapeRenderingMode(self_: *mut c_void, rendering_mode: wxSVGShapeRenderingMode);
    pub fn wxSVGFileDC_DestroyClippingRegion(self_: *mut c_void);
    pub fn wxSVGFileDC_CrossHair(self_: *mut c_void, x: c_int, y: c_int);
    // NOT_SUPPORTED: pub fn wxSVGFileDC_FloodFill(self_: *mut c_void, x: c_int, y: c_int, colour: *const c_void, style: wxFloodFillStyle) -> bool;
    pub fn wxSVGFileDC_GetPixel(
        self_: *const c_void,
        x: c_int,
        y: c_int,
        colour: *mut c_void,
    ) -> bool;
    pub fn wxSVGFileDC_SetPalette(self_: *mut c_void, palette: *const c_void);
    pub fn wxSVGFileDC_GetDepth(self_: *const c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxSVGFileDC_SetLogicalFunction(self_: *mut c_void, function: wxRasterOperationMode);
    // NOT_SUPPORTED: pub fn wxSVGFileDC_GetLogicalFunction(self_: *const c_void) -> wxRasterOperationMode;
    pub fn wxSVGFileDC_StartDoc(self_: *mut c_void, message: *const c_void) -> bool;
    pub fn wxSVGFileDC_EndDoc(self_: *mut c_void);
    pub fn wxSVGFileDC_StartPage(self_: *mut c_void);
    pub fn wxSVGFileDC_EndPage(self_: *mut c_void);

    // wxSashEvent
    pub fn wxSashEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxSashEvent_new(id: c_int, edge: wxSashEdgePosition) -> *mut c_void;
    pub fn wxSashEvent_GetDragRect(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxSashEvent_GetDragStatus(self_: *const c_void) -> wxSashDragStatus;
    // NOT_SUPPORTED: pub fn wxSashEvent_GetEdge(self_: *const c_void) -> wxSashEdgePosition;
    // NOT_SUPPORTED: pub fn wxSashEvent_SetEdge(self_: *mut c_void, edge: wxSashEdgePosition);
    pub fn wxSashEvent_SetDragRect(self_: *mut c_void, rect: *const c_void);
    // NOT_SUPPORTED: pub fn wxSashEvent_SetDragStatus(self_: *mut c_void, status: wxSashDragStatus);

    // wxSashLayoutWindow
    pub fn wxSashLayoutWindow_CLASSINFO() -> *mut c_void;
    pub fn wxSashLayoutWindow_new() -> *mut c_void;
    pub fn wxSashLayoutWindow_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    pub fn wxSashLayoutWindow_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    // NOT_SUPPORTED: pub fn wxSashLayoutWindow_GetAlignment(self_: *const c_void) -> wxLayoutAlignment;
    // NOT_SUPPORTED: pub fn wxSashLayoutWindow_GetOrientation(self_: *const c_void) -> wxLayoutOrientation;
    pub fn wxSashLayoutWindow_OnCalculateLayout(self_: *mut c_void, event: *mut c_void);
    pub fn wxSashLayoutWindow_OnQueryLayoutInfo(self_: *mut c_void, event: *mut c_void);
    // NOT_SUPPORTED: pub fn wxSashLayoutWindow_SetAlignment(self_: *mut c_void, alignment: wxLayoutAlignment);
    pub fn wxSashLayoutWindow_SetDefaultSize(self_: *mut c_void, size: *const c_void);
    // NOT_SUPPORTED: pub fn wxSashLayoutWindow_SetOrientation(self_: *mut c_void, orientation: wxLayoutOrientation);

    // wxSashWindow
    pub fn wxSashWindow_CLASSINFO() -> *mut c_void;
    pub fn wxSashWindow_new() -> *mut c_void;
    pub fn wxSashWindow_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxSashWindow_~wxSashWindow(self_: *mut c_void);
    pub fn wxSashWindow_GetMaximumSizeX(self_: *const c_void) -> c_int;
    pub fn wxSashWindow_GetMaximumSizeY(self_: *const c_void) -> c_int;
    pub fn wxSashWindow_GetMinimumSizeX(self_: *const c_void) -> c_int;
    pub fn wxSashWindow_GetMinimumSizeY(self_: *const c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxSashWindow_GetSashVisible(self_: *const c_void, edge: wxSashEdgePosition) -> bool;
    pub fn wxSashWindow_SetMaximumSizeX(self_: *mut c_void, min: c_int);
    pub fn wxSashWindow_SetMaximumSizeY(self_: *mut c_void, min: c_int);
    pub fn wxSashWindow_SetMinimumSizeX(self_: *mut c_void, min: c_int);
    pub fn wxSashWindow_SetMinimumSizeY(self_: *mut c_void, min: c_int);
    // NOT_SUPPORTED: pub fn wxSashWindow_SetSashVisible(self_: *mut c_void, edge: wxSashEdgePosition, visible: bool);
    // NOT_SUPPORTED: pub fn wxSashWindow_GetEdgeMargin(self_: *const c_void, edge: wxSashEdgePosition) -> c_int;
    pub fn wxSashWindow_SetDefaultBorderSize(self_: *mut c_void, width: c_int);
    pub fn wxSashWindow_GetDefaultBorderSize(self_: *const c_void) -> c_int;
    pub fn wxSashWindow_SetExtraBorderSize(self_: *mut c_void, width: c_int);
    pub fn wxSashWindow_GetExtraBorderSize(self_: *const c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxSashWindow_SashHitTest(self_: *mut c_void, x: c_int, y: c_int, tolerance: c_int) -> wxSashEdgePosition;
    pub fn wxSashWindow_SizeWindows(self_: *mut c_void);

    // wxScreenDC
    pub fn wxScreenDC_CLASSINFO() -> *mut c_void;
    pub fn wxScreenDC_new() -> *mut c_void;
    pub fn wxScreenDC_EndDrawingOnTop() -> bool;
    pub fn wxScreenDC_StartDrawingOnTop(window: *mut c_void) -> bool;
    pub fn wxScreenDC_StartDrawingOnTop1(rect: *mut c_void) -> bool;

    // wxScrollBar
    pub fn wxScrollBar_CLASSINFO() -> *mut c_void;
    pub fn wxScrollBar_new() -> *mut c_void;
    pub fn wxScrollBar_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxScrollBar_~wxScrollBar(self_: *mut c_void);
    pub fn wxScrollBar_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxScrollBar_GetPageSize(self_: *const c_void) -> c_int;
    pub fn wxScrollBar_GetRange(self_: *const c_void) -> c_int;
    pub fn wxScrollBar_GetThumbPosition(self_: *const c_void) -> c_int;
    pub fn wxScrollBar_GetThumbSize(self_: *const c_void) -> c_int;
    pub fn wxScrollBar_SetThumbPosition(self_: *mut c_void, view_start: c_int);
    pub fn wxScrollBar_IsVertical(self_: *const c_void) -> bool;

    // wxScrollEvent
    pub fn wxScrollEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxScrollEvent_new(command_type: wxEventType, id: c_int, pos: c_int, orientation: c_int) -> *mut c_void;
    pub fn wxScrollEvent_GetOrientation(self_: *const c_void) -> c_int;
    pub fn wxScrollEvent_GetPosition(self_: *const c_void) -> c_int;
    pub fn wxScrollEvent_SetOrientation(self_: *mut c_void, orient: c_int);
    pub fn wxScrollEvent_SetPosition(self_: *mut c_void, pos: c_int);

    // wxScrollWinEvent
    pub fn wxScrollWinEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxScrollWinEvent_new(command_type: wxEventType, pos: c_int, orientation: c_int) -> *mut c_void;
    pub fn wxScrollWinEvent_GetOrientation(self_: *const c_void) -> c_int;
    pub fn wxScrollWinEvent_GetPosition(self_: *const c_void) -> c_int;
    pub fn wxScrollWinEvent_SetOrientation(self_: *mut c_void, orient: c_int);
    pub fn wxScrollWinEvent_SetPosition(self_: *mut c_void, pos: c_int);

    // wxSearchCtrl
    pub fn wxSearchCtrl_CLASSINFO() -> *mut c_void;
    pub fn wxSearchCtrl_new() -> *mut c_void;
    pub fn wxSearchCtrl_new1(
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxSearchCtrl_~wxSearchCtrl(self_: *mut c_void);
    pub fn wxSearchCtrl_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxSearchCtrl_GetMenu(self_: *mut c_void) -> *mut c_void;
    pub fn wxSearchCtrl_IsSearchButtonVisible(self_: *const c_void) -> bool;
    pub fn wxSearchCtrl_IsCancelButtonVisible(self_: *const c_void) -> bool;
    pub fn wxSearchCtrl_SetMenu(self_: *mut c_void, menu: *mut c_void);
    pub fn wxSearchCtrl_ShowCancelButton(self_: *mut c_void, show: bool);
    pub fn wxSearchCtrl_ShowSearchButton(self_: *mut c_void, show: bool);
    pub fn wxSearchCtrl_SetDescriptiveText(self_: *mut c_void, text: *const c_void);
    pub fn wxSearchCtrl_GetDescriptiveText(self_: *const c_void) -> *mut c_void;
    // Mix-in(s) to wxSearchCtrl
    pub fn wxSearchCtrl_AsTextEntry(obj: *mut c_void) -> *mut c_void;

    // wxSetCursorEvent
    pub fn wxSetCursorEvent_CLASSINFO() -> *mut c_void;
    pub fn wxSetCursorEvent_new(x: c_int, y: c_int) -> *mut c_void;
    pub fn wxSetCursorEvent_GetCursor(self_: *const c_void) -> *mut c_void;
    pub fn wxSetCursorEvent_GetX(self_: *const c_void) -> c_int;
    pub fn wxSetCursorEvent_GetY(self_: *const c_void) -> c_int;
    pub fn wxSetCursorEvent_HasCursor(self_: *const c_void) -> bool;
    pub fn wxSetCursorEvent_SetCursor(self_: *mut c_void, cursor: *const c_void);

    // wxSettableHeaderColumn
    pub fn wxSettableHeaderColumn_delete(self_: *mut c_void);
    pub fn wxSettableHeaderColumn_SetTitle(self_: *mut c_void, title: *const c_void);
    pub fn wxSettableHeaderColumn_SetBitmap(self_: *mut c_void, bitmap: *const c_void);
    pub fn wxSettableHeaderColumn_SetWidth(self_: *mut c_void, width: c_int);
    pub fn wxSettableHeaderColumn_SetMinWidth(self_: *mut c_void, min_width: c_int);
    pub fn wxSettableHeaderColumn_SetAlignment(self_: *mut c_void, align: c_int);
    pub fn wxSettableHeaderColumn_SetFlags(self_: *mut c_void, flags: c_int);
    pub fn wxSettableHeaderColumn_ChangeFlag(self_: *mut c_void, flag: c_int, set: bool);
    pub fn wxSettableHeaderColumn_SetFlag(self_: *mut c_void, flag: c_int);
    pub fn wxSettableHeaderColumn_ClearFlag(self_: *mut c_void, flag: c_int);
    pub fn wxSettableHeaderColumn_ToggleFlag(self_: *mut c_void, flag: c_int);
    pub fn wxSettableHeaderColumn_SetResizeable(self_: *mut c_void, resizable: bool);
    pub fn wxSettableHeaderColumn_SetSortable(self_: *mut c_void, sortable: bool);
    pub fn wxSettableHeaderColumn_SetReorderable(self_: *mut c_void, reorderable: bool);
    pub fn wxSettableHeaderColumn_SetHidden(self_: *mut c_void, hidden: bool);
    pub fn wxSettableHeaderColumn_UnsetAsSortKey(self_: *mut c_void);
    pub fn wxSettableHeaderColumn_SetSortOrder(self_: *mut c_void, ascending: bool);
    pub fn wxSettableHeaderColumn_ToggleSortOrder(self_: *mut c_void);

    // wxShowEvent
    pub fn wxShowEvent_CLASSINFO() -> *mut c_void;
    pub fn wxShowEvent_new(winid: c_int, show: bool) -> *mut c_void;
    pub fn wxShowEvent_SetShow(self_: *mut c_void, show: bool);
    pub fn wxShowEvent_IsShown(self_: *const c_void) -> bool;
    // BLOCKED: pub fn wxShowEvent_GetShow(self_: *const c_void) -> bool;
